force-app/main/default/objects/Account/fields/AddrCart__c.field-meta.xml
<CustomField>
    <fullName>AddrCart__c</fullName>
    <label>Address Cart</label>
    <length>255</length>
    <type>Text</type>
</CustomField>