force-app/main/default/objects/Account/fields/AddressSendMail__c.field-meta.xml
<CustomField>
    <fullName>AddressSendMail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Send Mail</label>
    <type>Checkbox</type>
</CustomField>