force-app/main/default/objects/Account/fields/AddrType__c.field-meta.xml
<CustomField>
    <fullName>AddrType__c</fullName>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Previous address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>