force-app/main/default/objects/Account/fields/Buyer_Status__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Status__c</fullName>
    <formula>IF(TotalOrders__c &gt;= 2, &quot;Repeat Buyer&quot;, 
  IF(TotalOrders__c = 1, &quot;First Buyer&quot;, 
  &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Status</label>
    <type>Text</type>
</CustomField>