force-app/main/default/objects/Account/fields/ConstituantId__c.field-meta.xml
<CustomField>
    <fullName>ConstituantId__c</fullName>
    <description>ConstituantId Coming from Blackbaud</description>
    <externalId>true</externalId>
    <label>ConstituantId</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>