force-app/main/default/objects/Account/fields/Donor_Category__c.field-meta.xml
<CustomField>
    <fullName>Donor_Category__c</fullName>
    <label>Donor Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>