force-app/main/default/objects/Account/fields/DonorActive__c.field-meta.xml
<CustomField>
    <fullName>DonorActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donor Active</label>
    <type>Checkbox</type>
</CustomField>