force-app/main/default/objects/Account/fields/Household_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Household_Last_Name__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Name)),
    IF(
        RIGHT(Name, LEN(&quot;Household&quot;)) = &quot;Household&quot;,
        IF(
            LEN(TRIM(Name)) &gt; 5,
            TRIM(MID(Name, FIND(&quot; &quot;, Name, FIND(&quot; &quot;, Name, FIND(&quot; &quot;, Name) + 1) + 1) + 1, FIND(&quot; &quot;, Name, FIND(&quot; &quot;, Name, FIND(&quot; &quot;, Name, FIND(&quot; &quot;, Name) + 1) + 1) + 1) - FIND(&quot; &quot;, Name, FIND(&quot; &quot;, Name, FIND(&quot; &quot;, Name) + 1) + 1) - 1)),
            IF(
                LEN(TRIM(Name)) = 5,
                TRIM(MID(Name, FIND(&quot; &quot;, Name, FIND(&quot; &quot;, Name) + 1) + 1, FIND(&quot; &quot;, Name, FIND(&quot; &quot;, Name, FIND(&quot; &quot;, Name) + 1) + 1) - FIND(&quot; &quot;, Name, FIND(&quot; &quot;, Name) + 1) - 1)),
                IF(
                    LEN(TRIM(Name)) = 4,
                    TRIM(MID(Name, FIND(&quot; &quot;, Name) + 1, FIND(&quot; &quot;, Name, FIND(&quot; &quot;, Name) + 1) - FIND(&quot; &quot;, Name) - 1)),
                    IF(
                        LEN(TRIM(Name)) = 3,
                        TRIM(LEFT(Name, FIND(&quot; &quot;, Name) - 1)),
                        NULL
                    )
                )
            )
        ),
        TRIM(LEFT(Name, LEN(Name) - FIND(&quot; &quot;, Name, FIND(&quot; &quot;, Name, FIND(&quot; &quot;, Name) + 1) + 1)))
    ),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household Last Name</label>
    <type>Text</type>
</CustomField>