force-app/main/default/objects/Account/fields/HusbandId__c.field-meta.xml
<CustomField>
    <fullName>HusbandId__c</fullName>
    <externalId>true</externalId>
    <label>HusbandId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>