force-app/main/default/objects/Account/fields/importId__c.field-meta.xml
<CustomField>
    <fullName>importId__c</fullName>
    <externalId>true</externalId>
    <label>importId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>