force-app/main/default/objects/Account/fields/InvitationName__c.field-meta.xml
<CustomField>
    <fullName>InvitationName__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(Name , &quot;Household&quot;, &quot;&quot;), &quot;&amp;&quot;, &quot;and&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invitation Name</label>
    <type>Text</type>
</CustomField>