force-app/main/default/objects/Account/fields/isSolicitor__c.field-meta.xml
<CustomField>
    <fullName>isSolicitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitor</label>
    <type>Checkbox</type>
</CustomField>