force-app/main/default/objects/Account/fields/MaidName__c.field-meta.xml
<CustomField>
    <fullName>MaidName__c</fullName>
    <label>Maid Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>