force-app/main/default/objects/Account/fields/Primary_Salutation_Text__c.field-meta.xml
<CustomField>
    <fullName>Primary_Salutation_Text__c</fullName>
    <label>Primary Salutation Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>