force-app/main/default/objects/Account/fields/RollupAmount__c.field-meta.xml
<CustomField>
    <fullName>RollupAmount__c</fullName>
    <label>RollupAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>