force-app/main/default/objects/Account/fields/shopifyCustomerId__c.field-meta.xml
<CustomField>
    <fullName>shopifyCustomerId__c</fullName>
    <externalId>true</externalId>
    <label>shopifyCustomerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>