force-app/main/default/objects/Account/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Source of record</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>Shopify To Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>