force-app/main/default/objects/Account/fields/SpouseId__c.field-meta.xml
<CustomField>
    <fullName>SpouseId__c</fullName>
    <label>SpouseId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>