force-app/main/default/objects/Account/fields/SpouseIsPrimary__c.field-meta.xml
<CustomField>
    <fullName>SpouseIsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spouse Is Primary</label>
    <type>Checkbox</type>
</CustomField>