force-app/main/default/objects/Account/fields/Total_Orders_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Orders_Spent__c</fullName>
    <label>Total Orders Spent</label>
    <summarizedField>DonorGiftSummary.TotalGiftsAmount</summarizedField>
    <summaryForeignKey>DonorGiftSummary.DonorId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>