force-app/main/default/objects/Account/fields/TotalOrders__c.field-meta.xml
<CustomField>
    <fullName>TotalOrders__c</fullName>
    <label>Total Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>