force-app/main/default/objects/Account/fields/TotalSpent__c.field-meta.xml
<CustomField>
    <fullName>TotalSpent__c</fullName>
    <label>Total Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>