force-app/main/default/objects/Account/recordTypes/business_account.recordType-meta.xml
<RecordType>
    <fullName>business_account</fullName>
    <active>true</active>
    <label>business account</label>
</RecordType>