force-app/main/default/objects/Account/listViews/Active_Major_Donors_Households.listView-meta.xml
<ListView>
    <fullName>Active_Major_Donors_Households</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Donor_Category__c</columns>
    <columns>Type__c</columns>
    <columns>DonorActive__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Donor_Category__c</field>
        <operation>equals</operation>
        <value>Major</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Household</value>
    </filters>
    <filters>
        <field>DonorActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active - Major Donors - Households</label>
</ListView>