force-app/main/default/objects/Account/listViews/Donors.listView-meta.xml
<ListView>
    <fullName>Donors</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Donor_Category__c</columns>
    <columns>Type__c</columns>
    <columns>DonorActive__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Board Member,Board of Advisors,Donor,Donors,Foundation,Ministry Partner,Prayer List,Prospect</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE</field>
        <operation>contains</operation>
        <value>FL</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <label>Donors</label>
</ListView>