force-app/main/default/objects/Account/listViews/Need_Review_Shopify_Customers.listView-meta.xml
<ListView>
    <fullName>Need_Review_Shopify_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Needs_Review__c</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>PC_EMAIL</columns>
    <columns>TotalOrders__c</columns>
    <columns>Total_Orders_Spent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <filters>
        <field>Needs_Review__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <label>Need Review - Shopify Customers</label>
    <sharedTo>
        <group>Customer_To_donor_Group</group>
    </sharedTo>
</ListView>