force-app/main/default/objects/Account/listViews/Shopify_Customers.listView-meta.xml
<ListView>
    <fullName>Shopify_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>PC_EMAIL</columns>
    <columns>TotalOrders__c</columns>
    <columns>Total_Orders_Spent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Shopify,Shopify To Review</value>
    </filters>
    <label>Accounts - Source Shopify</label>
    <sharedTo>
        <group>Customer_To_donor_Group</group>
    </sharedTo>
</ListView>