force-app/main/default/objects/Account/listViews/Small_Donors.listView-meta.xml
<ListView>
    <fullName>Small_Donors</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>Type__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Board Member,Board of Advisors,Donor,Donors,Foundation,Ministry Partner,Prayer List,Prospect</value>
    </filters>
    <filters>
        <field>Donor_Category__c</field>
        <operation>equals</operation>
        <value>Small</value>
    </filters>
    <label>Small Donors</label>
</ListView>